testing/errors/test_write_txts_readonly.txts
IMPORT txts
ADD txts.NAME "should fail"
